--- a/css/style-menu-navbar-2019.css
+++ b/css/style-menu-navbar-2019.css
@@ -57,8 +57,8 @@
  
     *{margin: 0; padding: 0;}
  
-    body{ font-family: arial, helvetica, sans-serif;
-          font-size: 14px; background-color:#999999;
+    body{ font-family: arial, helvetica, sans-serif; font-size: medium;
+          background-color:#f1f1f1; color: #000000;
         }
 
 
