--- a/css/style-template-2019.css
+++ b/css/style-template-2019.css
@@ -60,70 +60,10 @@
 		    		 
 	/* Mobile Display Responsive / html font-size:100% / font-size:12px */
 	
-	*{ margin: 0; padding: 0px; box-sizing: border-box; }
+	*{ margin: 0; padding: 0px; box-sizing: border-box; display: inline; }
 		     
-    html, body , main, section { font-family: arial, helvetica, sans-serif; font-size: medium;
-                                 background-color:#f1f1f1; color: #000000;
-                                 text-decoration: none; 
-	                             }
-	
-    /* Styling the header */	
-    header { background-color: #cccccc; /* cinza prata */
-	         color: #111111; /* preto */
-	         margin-top: 0; 
-			 padding: 25em; 
-			 width: 100%; 
-			 display: flex;
-			 text-align: center; 
-			 border-bottom: 1px solid;
-			 text-align: left; 
-			 line-height: 90px;
-			 position: fixed; 
-			 }
-	
-	header h1 { margin-top: 0; 
-	            padding: .25em; 
-	            text-align: center; 
-	            display: inline;
-				}
-	
-	header {display: inline-block;}			
-
-    article, blockquote { font-size: medium; 
-	                      font-weight: 300; 
-	                      font-family: Verdana, Georgia, sans-serif; 
-	                      margin: 0; 
-						  padding: 1rem 3rem; 
-						  display: inline;
-						  } 
-						  
-	div, span { font-size: normal; font-weight: 300; }
-	            
-
-    /* For mobile font-size=normal with space between characters */
-     				  		
-	p { font-size: normal; 
-	    font-style: italic;
-	    font-weight: 200; /* peso da fonte */
-	    line-height:1.2;  /* altura da linha */
-	    margin: 10px; 
-		letter-spacing: 10px; /* space between characters */
-		color: #111111; /* preto */
-		} 
-	
-    p.normal  {font-size: normal; font-weight: normal; }
-	p.thick   {font-weight: bold; } /* thick = fonte grossa */
-	p.thicker {font-weight: 900; }  /* thicker = fonte mais grossa */
-	
-	
-    h1 { font-size: xx-large; font-weight: 500; } 
-    h2 { font-size: x-large;  font-weight: 400; }
-	h3 { font-size: large;    font-weight: 300; }
-	h4 { font-size: medium;   font-weight: 200; }
-	h5 { font-size: small;    font-weight: 100; }
-	h6 { font-size: x-small;  font-weight: 100; }
-	h7 { font-size: xx-small; font-weight: 100; }
-	
+    html { font-family: arial, helvetica, sans-serif; font-size: medium;
+           background-color:#f1f1f1; color: #000000; text-decoration: none; 	            
 
     h1 { background-color: #3b3b3b;
          color: #ddd;
