--- a/css/style-menu-navbar-2019.css
+++ b/css/style-menu-navbar-2019.css
@@ -58,18 +58,23 @@
     *{margin: 0; padding: 0;}
  
     body{ font-family: arial, helvetica, sans-serif; font-size: medium;
-          background-color:#f1f1f1; color: #000000; }
+          background-color:#f1f1f1; color: #000000;
+        }
 
+
+/* ================================================================================ */
 	
     /* LINKS  */
 							   
 	a { font-family: monospace;
-            color: #005aff; /* cor azul royal */
-	    border-bottom:3px solid #EA0000;  /* vermelho */
+        font-size: 3vh; 
+		color: #005aff; /* cor azul royal */
+		border-bottom:3px solid #EA0000;  /* vermelho */
 	    text-decoration: none; 
 	    text-align: center;
-	    display: block; 
-	    float: left; 
+		padding: 2vw; 		
+		display: block; 
+		float: left; 
 	    }
 
 	/*  remove the bullets and the margins and padding from the list */	
@@ -78,190 +83,174 @@
 	
 	/* Add a color to the current link */
 	a:visited { color: #700000; }  /* cor vermelho escuro margenta */
-	
-        a:hover { color: #f4511e; } /* laranja */
-			  
-        a:active { color: #9F00FF; } /* violeta escuro */
-			   
+    a:hover { color: #f4511e; } /* laranja */		  
+    a:active { color: #9F00FF; } /* violeta escuro */		   
 	a:focus { color: #444444; } /* cinza escuro  */	
+	
+	
+	/*  LINK <NAV> <LI> <A> VISITED / ACTIVE / FOCUS / HOVER (flutuar) */	
+   		/* Add a color to the current link */
+
+    nav ul li a:visited { background-color: #f2f2f2; /* cor cinza prata muito claro */ 
+      	                     color: #700000; }  /* cor vermelho escuro margenta */
+				
+    nav ul li a:active { background-color: #fffddd;	/* amarelo */
+	                        color: #9F00FF; } /* violeta escuro */
+	
+    nav ul li a:focus { background-color: #c2c2c2; /* branco */
+	                       color: #f4511e;  } /* laranja */
+						   
+     /* estilizar os links com sombra usando propriedade text-shadow e box-shadow */
+     nav ul li a:hover { background-color: #f1f1f1; 
+	                     color: #005f5f; /* verde escuro */
+						 border-bottom:3px solid #EA0000;  /* vermelho */
+                         text-decoration: none; 
+						 -moz-box-shadow:0 3px 10px 0 #CCC; 
+                         -webkit-box-shadow:0 3px 10px 0 #ccc; 
+                         text-shadow:0px 0px 5px #fff;}								
 		
+
+	
 /* ================================================================================ */
 	
 	/* 	NAVBAR NAVIGATION  / MOBILE MENU RESPONSIVE */ 
 				
 	nav { background-color: #f2f2f2; /* cor cinza prata muito claro */
-	      margin-right: 1%; 
-	      margin-left: 1%;
-              margin-top: 1%;		  
-              margin-bottom: 1%; 		  
-	      padding: 10px; 
-              height: auto; 
-              max-width: 100%; 
-	      min-width: 10%;		  
-	      display: inline-block; 
-	      border-radius: 1; 
-	      z-index: 100%; 
-	      float: none!important; 
-	      position: relative; 
-	      /* overflow: hidden; */
-	      }
-		  
-		  
-            navbar { font-size: medium;
-	             color: #273b49; /*cor cinza azulado escuro */ 
-		     list-style: none; 
-		     text-align: center; 
-		     text-decoration: none; 
-		     line-height: 1.42857143 !important; 
-		     letter-spacing: normal; 
-		     word-spacing: normal;			 
-		     border-radius: 1px;
-		     cursor: pointer; 			 
-		     left:5px; 
-		     right:5px; 
-		     top:5px; 
-		     bottom:5px; 
-	             }
+	      color: #273b49; /*cor cinza azulado escuro */ 
+		  list-style: none; 
+		  font-size: medium;
+		  text-align: center; 
+		  text-decoration: none; 
+		  line-height: 1.42857143 !important; 
+		  letter-spacing: normal; 
+		  word-spacing: normal;			 
+		  border-radius: 1px;
+		  cursor: pointer; 			 
+		  margin-right: 1%; 
+		  margin-left: 1%;
+          margin-top: 1%;		  
+          margin-bottom: 1%; 		  
+		  padding: 10px; 
+          max-width: 100%; 
+		  min-width: 10%;	
+          height: auto; 		  
+		  display: inline-block; 
+		  border-radius: 1; 
+		  z-index: 100%; 
+		  float: none!important; 
+		  position: relative; 
+		  overflow: hidden;
+		  }
+			 
 	
-	  navbar-default { display: inline-block; }
+	navbar-default { display: inline-block; }
 			
-	  navbar-header { float: none !important;}	
+	navbar-header { float: none !important;}	
 	
-          navbar-brand { float: none !important; 
-	                 font-size: 8px; 
-		         color: #005aff; /* cor azul royal */
-                         }
+    navbar-brand { float: none !important; color: #005aff; } /* cor azul royal */
 				   
 	navbar-left, navbar-right { float: normal !important;}
-					 
+	
+				 
  /* ================================================================================ */
 
 	/*  NAVBAR LINK <UL> <LI> <A>  */
 	
 	navbar ul li { display: inline-block; 
 	               margin-top: 0px;
-		       paddig: 1em; 
+				   padding: 1em; 
 	               padding-top: .36em; 
 	               padding-right: .15em; 
-		       padding-left: .15em;
-                       list-style: none;
-		        width: 100%;
-                       float: none!important;  				   
-		       overflow: auto;
-                       } 
+				   padding-left: .15em;
+                   list-style: none;
+				   width: 100%;
+                   float: none!important;  				   
+			       overflow: auto;
+                   } 
 		
 		
     navbar ul li a { color: #444444; /* cinza escuro */ 
-	             text-decoration: none; 
-		     text-align: center; 
-		     display: inline; 
+	                 text-decoration: none; 
+			         text-align: center; 
+			         display: inline; 
                      margin-top: 1em; 
-		     padding: .60em;
+					 padding: .60em;
                      margin-right: -4px;			 
-		     list-style: none; 
-		     font-family: 'Oswald', sans-serif; 
-		     font-size: 1.2em; 
+			         list-style: none; 
+			         font-family: 'Oswald', sans-serif; 
+			         font-size: 1.2em; 
                      line-height: 40px; 
-		     height: 40px; 
-		     border: 1px solid #888888; 
-		     width: 120px; 
-		     height: 50px; 
-	             float: left; 
-	             }
-										
- /* ================================================================================ */
-
-    /*  LINK <NAVBAR> <LI> <A> VISITED / ACTIVE / FOCUS / HOVER (flutuar) */	
-   	
-    navbar ul li a:visited { background-color: #f2f2f2; /* cor cinza prata muito claro */ 
-      	                     color: #700000; }  /* cor vermelho escuro margenta */
-				
-    navbar ul li a:active { background-color: #fffddd;	/* amarelo */
-	                    color: #9F00FF; } /* violeta escuro */
-	
-    navbar ul li a:focus { background-color: #c2c2c2; /* branco */
-	                   color: #f4511e;  } /* laranja */
-						   
-     /* estilizar os links com sombra usando propriedade text-shadow e box-shadow */
-     navbar ul li a:hover { background-color: #f1f1f1; 
-	                    color: #005f5f; /* verde escuro */
-			    border-bottom:3px solid #EA0000;  /* vermelho */
-                            text-decoration: none; 
-			   -moz-box-shadow:0 3px 10px 0 #CCC; 
-                           -webkit-box-shadow:0 3px 10px 0 #ccc; 
-                           text-shadow:0px 0px 5px #fff;}								
-		
+			         height: 40px; 
+			         border-radius: 1em; 
+			         border: 1px solid #888888; 
+			         width: 120px; 
+			         height: 50px; 
+			         float: left; 
+	                 }
+			 							
 /* ================================================================================ */
-
+										
     /* NAVBAR TOGGLE (alternar barra de navegação) */	
 	
-	toggle, navbar-toggle { display: inline-block; 	
-			        background-color: #f1f1f1; /* branco */
-	                        color: #555555;  /* cinza médio */
-	                        overflow: hidden;
-	                        }								  
-   
+	toggle { display: inline-block; 	
+		     background-color: #f1f1f1;  /* branco */
+	         color: #555555;  /* cinza medio */
+	         overflow: hidden;
+	         }								   
 	
 /* ================================================================================ */
 
     /* NAVBAR COLLAPSE (colapso da bara de navegação) */
 			
-	collapse, navbar-collapse { color: #005aff; /* cor azul royal */ 
-	                            border-top: 1px transparent; 
-				    display: none!important;
-	                            box-shadow: inset 0 1px 0 rgba(255,255,255,0.1); 
-				    }  
-								
-    collapse { display: block !important;}
-	
-
+	collapse{ color: #005aff; /* cor azul royal */ 
+	          border-top: 1px transparent; 
+			  display: block !important;
+	          box-shadow: inset 0 1px 0 rgba(255,255,255,0.1); 
+			  }  
+									
 /* ================================================================================ */
 		  		
-    /* NAVBAR DROPDOWN-MENU (submenu suspenso da barra de navegação) */
+    /* DROPDOWN - MENU (submenu suspenso da barra de navegação) */
 
     /* submenu, definindo a sua posição como absoluta(postition:absolute;),
        para que os itens do submenu não ultrapassem o seu menu pai e para
        que ele não interfira no fluxo dos elementos do menu.  */
 	
-	navbar navbar-dropdown { position: sticky;  /* sticky = posição suspensa pegajosa */
-		                 background: #f1f1f1; color: #000000;
-	                         -webkit-border-radius: 6px 0 6px 6px;
-                                 -moz-border-radius: 6px 0 6px 6px;
-				 text-shadow:0px 0px 5px #fff;
-			         border-radius: 6px 0 6px 6px; 
-			         top: 0; 
-	                         left: 100%;  
-	                         }
-		
-    navbar navbar-dropdown ul li a:hover{ background:#333333; 
-                                          color:#ffffff;
-                                          -moz-box-shadow:0 3px 10px 0 #CCCCCC; 
-                                          -webkit-box-shadow:0 3px 10px 0 #cccccc; 
-                                          text-shadow:0px 0px 5px #ffffff; 
-                                          }
-
+	dropdown { position: sticky;  /* sticky = posição suspensa pegajosa */
+	           -webkit-border-radius: 6px 0 6px 6px;
+               -moz-border-radius: 6px 0 6px 6px;
+			   text-shadow:0px 0px 5px #fff;
+			   border-radius: 6px 0 6px 6px; 
+	           top: 0; left: 100%; }
+	                        
     /* submenu, definindo a sua posição como absoluta(postition:absolute;),
        para que os itens do submenu não ultrapassem o seu menu pai e para
        que ele não interfira no fluxo dos elementos do menu.  */
 
-    navbar navbar-dropdown li ul { position: absolute;
-                                   background-color:#fffddd; 
-	                           color: #000000;
-                                   display: inline;
-			           float: left;
-                                   }   
+    dropdown li ul{ position: absolute;
+                    background-color:#fffddd; 
+					color: #000000;
+                    display: inline;
+			        float: left;
+                    }   
 
     /* Exibir o submenu */
-    navbar navbar-dropdown li:hover {float: left;} 
-    navbar navbar-dropdown ul:hover {float: left;}
+    dropdown li:hover {float: left;} 
+	dropdown ul:hover {float: left;}
 
-    navbar navbar-dropdown li ul a{ border:1px solid #c0c0c0;
-                                    position: absolute; 
-                                    display: inline;
-                                    float: left;				
-                                    }
+    dropdown li ul a{ border:1px solid #c0c0c0;
+                      position: absolute; 
+                      display: inline;
+                      float: left;				
+                      }
+    dropdown ul li a:hover{ background:#333333; 
+                            color:#ffffff; 
+                            -moz-box-shadow:0 3px 10px 0 #CCCCCC; 
+                            -webkit-box-shadow:0 3px 10px 0 #cccccc; 
+                            text-shadow:0px 0px 5px #ffffff; 
+                            }
 
-    navbar navbar-dropdown pull-left { float: none; } /* menu flutuante puxado para a esquerda */
+    dropdown pull-left { float: none; } /* menu flutuante puxado para a esquerda */
 	
 	
 /* ================================================================================ */
@@ -269,67 +258,68 @@
     /* Responsive LINK NAVBAR TOPNAV (barra de navegação superior) */
 	
     /* Add a black background color to the top navigation */
-    navbar topnav, navbar-topnav { background-color: #333333; /* preto */ }	                       
+    topnav { background-color: #333333; /* preto */
+	         overflow: hidden;}
 
     /* Style the links inside the navigation bar */
-    navbar topnav a { float: left; 
-	              display: block; 
-		      color: #f2f2f2; /* cor cinza prata muito claro */
-		      text-align: center;
-                      padding: 14px 16px; 
-		      text-decoration: none; 
-		      font-size: medium;
-					  }
+    topnav a { float: left; 
+	           display: block; 
+			   color: #f2f2f2; /* cor cinza prata muito claro */
+			   text-align: center;
+               padding: 14px 16px; 
+			   text-decoration: none; 
+			   font-size: medium;
+			   }
 
     /* Change the color of links on hover */
-    navbar topnav a:hover { background-color: #dddddd; /* cor cinza prata claro */
-	                        color: #333333; } /* preto */
+    topnav a:hover { background-color: #dddddd; /* cor cinza prata claro */
+	                 color: #333333; } /* preto */
 
     /* Add an active class to highlight the current page */	
     /* Add a color to the active/current link */
-    navbar topnav a:active { background-color: #f1f1f1; /* cor cinza prata branco */
+    topnav a:active { background-color: #f1f1f1; /* cor cinza prata branco */
 	                         color: #4CAF50; } /* cor verde */
 
     /* Hide the link that should open and close the topnav on small screens */
-    navbar topnav icon { display: none; }	
+    topnav icon { display: none; }	
 	
 
 /* ================================================================================ */
     
 	/* BUTTON BTN / hover = flutuar */
 	
-	button btn { background-color: #333333; /* cinza escuro */ 
-	             color: #f1f1f1; /* branco acizentado */
-		     padding: 0;
-	             border-radius: 0; 
-		     transition: .2s; 
-		     }
+	btn { background-color: #333333; /* cinza escuro */ 
+	      color: #f1f1f1; /* branco acizentado */
+		  padding: 0;
+	      border-radius: 0; 
+		 transition: .2s; 
+		}
 		   
-    button btn:hover { border: 1px solid #444444; /* cinza escuro */
-	               background-color: #ffffff; /* branco */
-	               color: #000000;  /* preto */ 
-			}	   			
+    btn:hover { border: 1px solid #444444; /* cinza escuro */
+	            background-color: #ffffff; /* branco */
+	            color: #000000;  /* preto */ 
+				}	   			
 	
-	button btn:focus { border: 1px solid #555555; /* cinza escuro */
-	                   background-color: #000000; /* preto */
-	                   color: #ffffff;  /* branco */ 
-			   }	   			
+	btn:focus { border: 1px solid #555555; /* cinza escuro */
+	            background-color: #000000; /* preto */
+	            color: #ffffff;  /* branco */ 
+				}	   			
 	
 	/* tamanho do espaçamento entre os botões */
 	
-	button btn { width: 15%; white-space: small; }
-        button btn primary   { width: 15%; white-space: small; }
-        button btn secundary { width: 15%; white-space: small; }
-	button btn active    { width: 15%; white-space: small; }
-	button btn inverse   { width: 15%; white-space: small; }
-	button btn success   { width: 15%; white-space: small; }
-	button btn info      { width: 15%; white-space: small; }
-	button btn danger    { width: 15%; white-space: small; }
-	button btn warning   { width: 15%; white-space: small; }
-	button btn dark      { width: 15%; white-space: small; }
-	button btn light     { width: 15%; white-space: small; }
-	button btn lg large  { width: 15%; white-space: small; }
-	button btn sm small  { width: 15%; white-space: small; }
+	btn { width: 15%; white-space: small; }
+    btn primary   { width: 15%; white-space: small; }
+    btn secundary { width: 15%; white-space: small; }
+	btn active    { width: 15%; white-space: small; }
+	btn inverse   { width: 15%; white-space: small; }
+	btn success   { width: 15%; white-space: small; }
+	btn info      { width: 15%; white-space: small; }
+	btn danger    { width: 15%; white-space: small; }
+	btn warning   { width: 15%; white-space: small; }
+	btn dark      { width: 15%; white-space: small; }
+	btn light     { width: 15%; white-space: small; }
+	btn lg large  { width: 15%; white-space: small; }
+	btn sm small  { width: 15%; white-space: small; }
 	  
     /* Fim CSS Button */
 			  
