--- a/css/style-menu-navbar-2019.css
+++ b/css/style-menu-navbar-2019.css
@@ -57,9 +57,8 @@
  
     *{margin: 0; padding: 0;}
  
-    body{ font-family: arial, helvetica, sans-serif; font-size: medium;
-          background-color:#f1f1f1; color: #000000;
-        }
+    body{ font-family: Arial, Helvetica, Sans-serif; font-size: medium;
+          background-color:#f1f1f1; color: #000000; }
 
 
 /* ================================================================================ */
@@ -69,7 +68,7 @@
 	a { font-family: monospace;
         font-size: 3vh; 
 		color: #005aff; /* cor azul royal */
-		border-bottom:3px solid #EA0000;  /* vermelho */
+		border-bottom:3px solid; 
 	    text-decoration: none; 
 	    text-align: center;
 		padding: 2vw; 		
@@ -108,8 +107,6 @@
 						 -moz-box-shadow:0 3px 10px 0 #CCC; 
                          -webkit-box-shadow:0 3px 10px 0 #ccc; 
                          text-shadow:0px 0px 5px #fff;}								
-		
-
 	
 /* ================================================================================ */
 	
@@ -139,7 +136,7 @@
 		  z-index: 100%; 
 		  float: none!important; 
 		  position: relative; 
-		  overflow: hidden;
+		  overflow: auto;
 		  }
 			 
 	
@@ -156,36 +153,37 @@
 
 	/*  NAVBAR LINK <UL> <LI> <A>  */
 	
-	navbar ul li { display: inline-block; 
-	               margin-top: 0px;
-				   padding: 1em; 
-	               padding-top: .36em; 
-	               padding-right: .15em; 
-				   padding-left: .15em;
-                   list-style: none;
-				   width: 100%;
-                   float: none!important;  				   
-			       overflow: auto;
-                   } 
+	nav ul li { display: inline-block;
+                text-decoration: none; 
+			    text-align: center; 
+			    display: inline; 	
+	            margin-top: 1%;
+				padding: 1%; 
+	            padding-top: 1%; 
+	            padding-right: 1%; 
+				padding-left: 1%;
+                list-style: none;
+				width: 100%;
+                float: none!important;  				   
+			    overflow: auto;
+                } 
 		
 		
-    navbar ul li a { color: #444444; /* cinza escuro */ 
+    nav ul li a { color: #444444; /* cinza escuro */ 
 	                 text-decoration: none; 
 			         text-align: center; 
 			         display: inline; 
-                     margin-top: 1em; 
-					 padding: .60em;
-                     margin-right: -4px;			 
+                     margin-top: 1%; 
+					 padding: .1%;
+                     margin-right: 1%;			 
 			         list-style: none; 
-			         font-family: 'Oswald', sans-serif; 
-			         font-size: 1.2em; 
-                     line-height: 40px; 
-			         height: 40px; 
-			         border-radius: 1em; 
+                     line-height: 25px; 
+			         height: 25px; 
+			         border-radius: 1%; 
 			         border: 1px solid #888888; 
-			         width: 120px; 
-			         height: 50px; 
-			         float: left; 
+			         width: 1%; 
+			         height: 1%; 
+			         float: center; 
 	                 }
 			 							
 /* ================================================================================ */
